src/objects/loan__Org_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Adjust_Rounding_in_last_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked then we do the rounding off the payment amount and the last principal/interest due amount will be adjusted.</inlineHelpText>
        <label>Adjust Rounding in last Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Applet_Jars_Location__c</fullName>
        <inlineHelpText>This field stores the URL for Biometric JAR file used for the purpose of development and testing.</inlineHelpText>
        <label>Applet Jars Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Batch_size_for_daily_jobs__c</fullName>
        <label>Batch size for daily jobs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Biometric_DB_Connection__c</fullName>
        <inlineHelpText>This is used to provide the path for JAR files</inlineHelpText>
        <label>Biometric DB Connection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Check_Teller_Balance_before_EOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Teller Balance before EOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Custom_Fee_Calculator_Class__c</fullName>
        <inlineHelpText>Here, you can provide the name of the class to calculate custom fees</inlineHelpText>
        <label>Custom Fee Calculator Class</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Default_Tolerance_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Organization wide tolerance value for payments.</description>
        <inlineHelpText>Organization wide tolerance value for loan repayments.</inlineHelpText>
        <label>Default Tolerance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Digits_After_Decimals__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>Digits are decimals for rounding.</inlineHelpText>
        <label>Digits After Decimals</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Rounding_In_Amz_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked then there will not any any rounding in amz schedule.
All the interest and payment amount will be saved as un rounded one.</inlineHelpText>
        <label>Disable Rounding In Amz Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This disables all the triggers. It is to be used only while migrating data into the system. It must be disabled otherwise.</inlineHelpText>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Amortization_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked then at rescheduling amortization schedule will be drawn</inlineHelpText>
        <label>Draw Amortization Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_Bank_Trust_Account_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this validation is true then you cannot create more than one Bank Trust Account.</description>
        <label>Enable Bank Trust Account Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_Fractionalization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to display the Investors tab on a loan application, thus enabling Fractionalization</inlineHelpText>
        <label>Enable Fractionalization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_Griaule_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, you can register the fingerprint with a biometric device.</inlineHelpText>
        <label>Enable Griaule Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_M2SYS_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, you can register the fingerprint with a biometric device</inlineHelpText>
        <label>Enable M2SYS Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_Teller_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the system will consider teller management when accounting entries are created. Each user must be assigned one General ledger ( Teller account ) and IsTeller under user information must be checked.</inlineHelpText>
        <label>Enable Teller Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Final_Payment_Differ__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This works in combination with Adjust rounding in last Pmt parameter.
If both are checked then rounding is done in last payment by increasing the last payment amount.
If this is unchecked then all the payments will be equated(even).</inlineHelpText>
        <label>Final Payment Differ (in Amz Schedule)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Integrate_Salesforce_CRM__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If this is checked,  the standard objects Account and Contacts will be used.</inlineHelpText>
        <label>Integrate Salesforce CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Accrual_Thresold_days__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Interest Accrual Threshold days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Log_Level__c</fullName>
        <defaultValue>&quot;ERROR&quot;</defaultValue>
        <description>The loggin level of the application. Valid options are:
DEBUG, ERROR, NONE</description>
        <inlineHelpText>The loggin level of the application. Valid options are:
DEBUG, ERROR, NONE</inlineHelpText>
        <label>Log Level</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Namespace_Prefix__c</fullName>
        <defaultValue>&quot;loan&quot;</defaultValue>
        <description>This is MFiFlex internal.</description>
        <inlineHelpText>This is MFiFlex internal. Do not delete/edit this value.</inlineHelpText>
        <label>Namespace Prefix</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Rounding_Mode__c</fullName>
        <defaultValue>&apos;NEAREST&apos;</defaultValue>
        <inlineHelpText>This specifies the rounding behavior for numerical operations capable of discarding precision. Each rounding mode indicates how the least significant returned digit of a rounded result is to be calculated.</inlineHelpText>
        <label>Rounding Mode</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Shift_Date_Before_Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No longer supported.</description>
        <inlineHelpText>No longer supported.</inlineHelpText>
        <label>Shift Date Before Holiday (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Skip_Holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this value is true, holidays are not included in dates of the amortization schedule and no dues are generated on holidays. This feature is supported only for the contracts with Daily payment frequency.</inlineHelpText>
        <label>Skip Holidays for Daily Loans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Statments_Logo_File_Name__c</fullName>
        <description>Provide file name of static resource with extension. for ex: .png, .jpeg etc</description>
        <inlineHelpText>This is the file name for the loan account statement</inlineHelpText>
        <label>Statements Logo File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Track_Account_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Account History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Client_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Client History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Bazaar_Namespace__c</fullName>
        <label>Namespace Prefix(Bazaar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Convert_Country_Code__c</fullName>
        <label>Convert Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Disable_SMS_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable SMS Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Max_SMS__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Max SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Max_Sms_Retry_Count__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max SMS Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__SMS_Send_Time_Limit__c</fullName>
        <defaultValue>30</defaultValue>
        <description>value in minutes past current time ,from which sent sms verification messages are considered. It is used with MAX SMS to restrict the no of sms sent</description>
        <label>SMS Send Time Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__SMS_Timeout__c</fullName>
        <defaultValue>30</defaultValue>
        <label>SMS Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Org Parameters</label>
</CustomObject>